fix(mdx): Fix code and example styles to have proper scrollbar

--- a/packages/mdx/client/mdxComponents/index.styl
+++ b/packages/mdx/client/mdxComponents/index.styl
@@ -1,21 +1,34 @@
+$codeBg = #fafafa
+$exampleBg = #f5f5f5
+
 .p
   margin-top 2u
 .h2
   margin-top 8u
 .h6
   margin-top 2u
-.exampleWrapper
-  background-color #f5f5f5
-  border-bottom-left-radius 1u
-  border-bottom-right-radius 1u
 .example
   padding 4u 2u
-.code
-  background-color #fafafa
+  background-color $exampleBg
+  border-bottom-left-radius 1u
+  border-bottom-right-radius 1u
+.codeWrapper
+  padding-left 2u
+  padding-right 2u
+  background-color $codeBg
   border-top-left-radius 1u
   border-top-right-radius 1u
+.code
+  margin 0
+  padding-top 2u
+  padding-bottom 2u
+  padding-left 0
+  padding-right 0
+  background-color $codeBg
+  +web()
+    overflow hidden
 .inlineCode
-  background-color #fafafa
+  background-color $codeBg
 .li
   padding-left 2u
 .listIndex
